# trif

./: .gitignore  CMakeLists.txt  LICENSE  README.md
example/: CMakeLists.txt
example/gears/: glxgears.cpp
example/geometry/: checkerboard_gs.cpp
example/indirect/: checkerboard.cpp
example/instanced/: brickwall.cpp
example/msaa/: CMakeLists.txt  msaa.cpp
example/rtt/: rtt.cpp
example/tessellation/: tess.cpp  tess_gs.cpp
example/texture/: texture_wrap.cpp
example/triangle/: tri_gs.cpp  triangle.cpp
include/: application.hpp  parser.hpp  shader.hpp
